# fastAPI_practice

./: README.md  databae.py  fastapi.db  index.html  main.py  models.py  pyproject.toml
board/: board_crud.py  board_router.py  board_schema.py
myenv/: pyvenv.cfg
user/: user_crud.py  user_router.py  user_schema.py
venv_name/: pyvenv.cfg
venvs/myapi/: pyvenv.cfg
