[tool.poetry]
name = "fap"
version = "0.1.0"
description = "fast_api_pj"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
skip = "^0.1.0"
sqlalchemy = "^2.0.25"
pydantic = "^2.5.3"
python-multipart = "^0.0.9"
python-jose = "^3.3.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
